create modules and ng-bootstrap

--- a/src/app/views/products/products/products.component.html
+++ b/src/app/views/products/products/products.component.html
@@ -13,7 +13,7 @@
               </p>
             </div>
             <div class="d-flex justify-content-between align-items-center mt-2 mb-1">
-              <a class="btn btn-primary" [routerLink]="['/product', product.id]">Подробнее</a>
+              <a class="btn btn-primary" [routerLink]="['/products', product.id]">Подробнее</a>
               <span class="fs-3">{{ product.price }} руб.</span>
             </div>
           </div>
