--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,6 @@
   background-image: url("/images/up.png");
   transform: rotate(3deg);
 }
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
