--- a/src/app/views/layout.component.html
+++ b/src/app/views/layout.component.html
@@ -1,3 +1,7 @@
-<header-component></header-component>
-<router-outlet></router-outlet>
-<footer-component></footer-component>
+<div class="wrapper">
+  <div class="content">
+    <header-component></header-component>
+    <router-outlet></router-outlet>
+  </div>
+  <footer-component></footer-component>
+</div>
